<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StudySpaces</string>
    
    <!-- Search-related strings for Search-->
    <string name="search_hint">Search</string>
    <string name="num_people_hint">Number of People</string>
    <string name="from_hint">Select a time</string>
    <string name="date_hint">MM/DD/YYYY</string>
    <string name="search_button_text">Search</string>
    <string name="search_instructions">Search for places to study by selecting
        your desired options and pressing Search</string>
    <string name="begin_search">Search for places to study by selecting
        your desired options and pressing Search</string>
    <string name="title_search">Search</string>
    <string name="title_filter">Filter</string>
    <string name="title_group_size">Group size</string>
    <string name="title_date">Date</string>
    <string name="title_from_time">From</string>
    <string name="title_to_time">To</string>
    <string name="time_default_from">12:OO AM</string>
    <string name="time_default_to">11:00 PM</string>
    <string name="title_private_box">Private</string>
    <string name="title_whiteboard_box">Whiteboard</string>
    <string name="title_computer_box">Computer</string>
    <string name="title_projector_box">Projector</string>
    <string name="filter_button_text">Filter</string>
    
    <!-- MainActivity strings -->
    <string name="text_refresh_button">Refresh</string>
    <string name="text_search_button">Search</string>
    <string name="titleItemPrefs">Settings</string>
    
    
    <!-- RoomDetailsActivity strings -->
    <string name="title_building">Building:</string>
    <string name="title_room">Room:</string>
    <string name="title_occupancy">Max occupancy:</string>
    <string name="title_projector">Projector:</string>
    <string name="title_computer">Computer:</string>
    <string name="title_whiteboard">Whiteboard:</string>
    <string name="title_privacy">Private:</string>
    
    <string name="text_reserve_button">Reserve</string>
    <string name="title_comment">Comment</string>
    

    <!-- Preferences -->
    <string name="titleDisplayPrefs">Display</string>
    <string name="titleSortPref">Sort by…</string>
    <string name="summarySortPref">Sort the rooms list by…</string>

    <string name="titleDefSearchPrefs">Default search settings</string>
    <string name="titleCapacityPref">Group size</string>
    <string name="summaryCapacityPref">The number of people</string>
    <string name="titlePrivatePref">Private</string>
    <string name="summaryPrivatePref">Search only for private rooms</string>
    <string name="titleWhiteboardPref">Whiteboard</string>
    <string name="summaryWhiteboardPref">Search only for rooms with whiteboards</string>
    <string name="titleComputerPref">Computer</string>
    <string name="summaryComputerPref">Search only for rooms with computers</string>
    <string name="titleProjectorPref">Projector</string>
    <string name="summaryProjectorPref">Search only for rooms with projectors</string>
    <string name="title_filter_text">Text filter</string>
    <string name="filter_hint">Room or building name</string>


</resources>
