<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EEE"
    android:baselineAligned="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

    <!-- ListView for containing viewable spaces -->
	    <ListView
	        android:id="@+id/spaces_list"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:divider="#AAA"
	        android:dividerHeight="2dp"
	        android:drawSelectorOnTop="true"
	        />
	    
	    <!-- This TextView displays when the ListView is empty -->
	    <TextView
	        android:id="@+id/spaces_list_empty"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:text="@string/begin_search"
	        />     
        
    </LinearLayout>
`
    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/title_search"
            android:textSize="24sp"/>

        <TableLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="8dip">

            <TableRow>
                <TextView
                    style="@style/smallTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_group_size"
                    />

                <TextView
                    style="@style/smallTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dip"
                    android:text="@string/title_date"
                    />
            </TableRow>

            <TableRow>
                <Spinner
                    android:id="@+id/num_people"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/num_people_hint"
                    android:layout_marginRight="16dip"
                    />

                <Button
                    android:id="@+id/dateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_button_text"
            android:onClick="submit"
            />

        <View
            android:layout_height="2dp"
            android:layout_width="fill_parent"
            android:background="#888"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/title_filter"
            android:textSize="24sp"/>

        <TableLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="8dip">

            <TableRow>
                <TextView
                    style="@style/smallTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/title_from_time"
                    />

                <TextView
                    style="@style/smallTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/title_to_time"
                    />
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/fromTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_default_from"
                    android:layout_marginRight="16dip"
                    />

                <Button
                    android:id="@+id/toTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_default_to"
                    />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent">

            <TableRow>
                <CheckBox
                    style="@style/CheckboxText"
                    android:id="@+id/private_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_private_box"
                    />

                <CheckBox
                    style="@style/CheckboxText"
                    android:id="@+id/whiteboard_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_whiteboard_box"
                    />
            </TableRow>

            <TableRow>
                <CheckBox
                    style="@style/CheckboxText"
                    android:id="@+id/computer_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_computer_box"
                    />

                <CheckBox
                    style="@style/CheckboxText"
                    android:id="@+id/projector_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_projector_box"
                    />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_button_text"
            android:onClick="filter"
            />
    </LinearLayout>

</LinearLayout>

