<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EEEEEE"
    android:baselineAligned="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_weight="1"
        >

        <TableLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:stretchColumns="1"
            >

            <TableRow>
                <TextView
                    style="@style/RoomDetailText"
                    android:text="@string/title_building"
                    />

                <TextView
                    style="@style/RoomDetailValue"
                    android:id="@+id/text_building"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    style="@style/RoomDetailText"
                    android:text="@string/title_room"
                    />

                <TextView
                    style="@style/RoomDetailValue"
                    android:id="@+id/roomTitle"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    style="@style/RoomDetailText"
                    android:text="@string/title_occupancy"
                    />

                <TextView
                    style="@style/RoomDetailValue"
                    android:id="@+id/text_occupancy"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    style="@style/RoomDetailText"
                    android:text="@string/title_privacy"
                    />

                <TextView
                    style="@style/RoomDetailValue"
                    android:id="@+id/text_privacy"
                    />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/text_projector"
                android:src="@drawable/ic_action_projector"
                android:contentDescription="@string/title_projector"
                android:scaleType="fitXY"
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:layout_margin="10dp"
                android:onClick="amenityTooltip"
                />

            <ImageView
                android:id="@+id/text_computer"
                android:src="@drawable/ic_action_monitor"
                android:contentDescription="@string/title_computer"
                android:scaleType="fitXY"
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:layout_margin="10dp"
                android:onClick="amenityTooltip"
                />

            <ImageView
                android:id="@+id/text_whiteboard"
                android:src="@drawable/ic_action_chalkboard"
                android:contentDescription="@string/title_whiteboard"
                android:scaleType="fitXY"
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:layout_margin="10dp"
                android:onClick="amenityTooltip"
                />
        </LinearLayout>

        <TextView
            style="@style/smallTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_comment" />

        <TextView
            android:id="@+id/text_comment"
            style="@style/PlainText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/reserveButton"
            style="@style/PlainText"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="0"
            android:onClick="reserve"
            android:text="@string/text_reserve_button"
            />
    </LinearLayout>

    <View
        android:layout_width="4dp"
        android:layout_height="fill_parent"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="#AAA"
        />

    <!-- A one-child container for the MapView -->
    <FrameLayout
        android:id="@+id/map_container"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:padding="8dp"
        android:layout_weight="1"
        />

</LinearLayout>