<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EEEEEE"
    android:padding="4dp"
    >

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="vertical">

        <TextView
            style="@style/PlainText"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/search_instructions"
            />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_height="fill_parent"
                android:layout_width="wrap_content"
                android:layout_marginRight="18dip"
                android:orientation="vertical">

                <!-- Number of people fields -->
                <TextView
                    style="@style/smallTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Group Size"
                    android:paddingTop="10dp"
                    />

                <Spinner
                    android:id="@+id/num_people"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/num_people_hint"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_height="fill_parent"
                android:layout_width="wrap_content"
                android:orientation="vertical">

                <!-- Date fields -->
                <TextView
                    style="@style/smallTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dip"
                    android:text="Date"
                    android:paddingTop="10dp"
                    />

                <Button
                    android:id="@+id/dateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    />
            </LinearLayout>

        </LinearLayout>
        <!-- Time fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_height="fill_parent"
                android:layout_width="wrap_content"
                android:layout_marginRight="24dip"
                android:orientation="vertical">

                <TextView
                    style="@style/smallTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="24dip"
                    android:text="From"
                    />

                <Button
                    android:id="@+id/fromTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12:OO AM"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/smallTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="24dip"
                    android:text="To"
                    />

                <Button
                    android:id="@+id/toTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11:00 PM"
                    />
            </LinearLayout>
        </LinearLayout>

        <!-- Room Option Checkboxes -->
        <TextView
            style="@style/smallTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Room Options"
            android:paddingTop="10dp"
            />

        <TableLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            >

            <TableRow>
                <CheckBox
                    style="@style/CheckboxText"
                    android:id="@+id/private_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Private"
                    />

                <CheckBox
                    style="@style/CheckboxText"
                    android:id="@+id/whiteboard_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Whiteboard"
                    />
            </TableRow>

            <TableRow>
                <CheckBox
                    style="@style/CheckboxText"
                    android:id="@+id/computer_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Computer"
                    />

                <CheckBox
                    style="@style/CheckboxText"
                    android:id="@+id/projector_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Projector"
                    />
            </TableRow>

        </TableLayout>

        <EditText
            android:id="@+id/building_name_input"
            style="@style/TextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Search by Building Name"
            />

        <Button
            android:id="@+id/submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_button_text"
            android:onClick="submit"
            android:layout_weight="0"
            />
    </LinearLayout>

</ScrollView>
